# rust

./: Cargo.toml
html/: index.html
src/: main.rs
src/html/: index.css  index.html
