[package]
name = "file-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4.0"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3.15", default-features = false }
bytes = "1.0.1"